<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/bg_albums">


        <cn.zhaiyifan.lyric.widget.ScrollDisabledListView
            android:id="@+id/view_lyric"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:scrollbars="none"/>

        <TextView
            android:id="@+id/text_lyric_not_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/song_lyric_not_found"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="gone"/>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="gone"/>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_repeat"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_repeat"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:layout_marginLeft="@dimen/md_margin_medium"
                      android:gravity="center"
                      android:text="@string/repeat"
                      android:textColor="@color/material_black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_shuffle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_shuffle"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:layout_gravity="center"
                      android:layout_marginLeft="@dimen/md_margin_medium"
                      android:gravity="center"
                      android:text="@string/shuffle"
                      android:textColor="@color/material_black"/>

        </LinearLayout>


    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rc_list_music"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>

