<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_horizontal_margin"

    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetLeft="16dp"
        app:contentInsetStart="16dp"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:src="@drawable/ic_hamburger_menu"/>

            <android.support.v7.widget.SearchView
                android:id="@+id/search_view_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                app:queryHint="@string/search_text_hint"
                >

            </android.support.v7.widget.SearchView>
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="YOUR MUSIC"
                android:textAllCaps="true"
                android:textColor="@color/material_white"
                android:textSize="@dimen/size_text_title_toolbar"
                android:typeface="sans"/>
        </RelativeLayout>


    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/main.collapsing"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        >
            <ImageView
                android:id="@+id/main.backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_albums"
                app:layout_collapseMode="parallax"
            />


            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="@dimen/md_margin_normal"
                          android:gravity="center_horizontal|center"
                          android:layout_centerInParent="true"
                          android:orientation="vertical">


                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/favorite"
                          android:textAllCaps="true"
                          android:textColor="@color/material_white"
                          android:textSize="@dimen/md_font_text_xxxlarge"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="20 favorites"
                          android:textSize="@dimen/md_font_text_normal"/>


            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/main.toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:visibility="gone"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />
        </RelativeLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/md_margin_medium"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/bg_btn_repeat_your_music"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:layout_marginLeft="@dimen/md_margin_medium"
                          android:text="@string/repeat"
                          android:textColor="@color/material_black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/bg_btn_shuffle_your_music"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:layout_marginLeft="@dimen/md_margin_medium"
                          android:text="@string/shuffle"
                          android:textColor="@color/material_black"/>

            </LinearLayout>


        </RelativeLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rc_list_music_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

        />
    </LinearLayout>


    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginRight="@dimen/md_margin_medium"
        android:src="@drawable/ic_play_favorite"
        app:layout_anchor="@id/main.appbar"
        app:layout_anchorGravity="bottom|right|end"
    />

</LinearLayout>